<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
        android:id="@+id/coord"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabScrollUp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/arrow_up_icon"
            android:backgroundTint="@color/white"
            app:fabCustomSize="50dp"
            app:elevation="60dp"
            app:borderWidth="0dp"
            android:layout_gravity="top|right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="@id/coord"
            android:visibility="gone" app:layout_constraintTop_toTopOf="@id/coord"
            app:layout_constraintEnd_toStartOf="@+id/scroller"
            android:layout_marginEnd="10dp"/>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                tools:context="com.projects.youtubeapp.activities.VideoDetailActivity" android:isScrollContainer="true">


            <include layout="@layout/toolbar" android:id="@+id/gmbnToolbarVideoDetailActivity"/>


            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgVideoThumbnail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gmbnToolbarVideoDetailActivity"
            />
            <TextView
                    android:text="@string/VIDEO_TITLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoTitleCaption"
                    app:layout_constraintTop_toBottomOf="@+id/imgVideoThumbnail" android:layout_marginTop="15dp"
                    android:textAlignment="viewEnd" android:textSize="14sp" android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
                    android:textColor="@android:color/black" android:visibility="invisible"/>
            <TextView
                    android:text="@string/VIDEO_DURATION"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoDurationCaption"
                    android:textAlignment="viewEnd" android:textSize="14sp" android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/txtVideoTitleCaption" android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtVideoTitle" android:textColor="@android:color/black"
                    android:visibility="invisible"/>
            <TextView
                    android:text="@string/VIDEO_PUBLISHED"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoDatePublishedCaption"
                    android:textAlignment="viewEnd" android:textSize="14sp" android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/txtVideoDurationCaption" android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtVideoDuration" android:textColor="@android:color/black"
                    android:visibility="invisible"/>
            <TextView
                    android:text="@string/VIDEO_DESCRIPTION"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoDescriptionCaption"
                    android:textAlignment="viewEnd" android:textSize="14sp" android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/txtVideoDatePublishedCaption" android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtVideoDatePublished"
                    android:textColor="@android:color/black"
                    android:visibility="invisible"/>
            <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoTitle" app:layout_constraintStart_toEndOf="@+id/txtVideoTitleCaption"
                    android:layout_marginStart="5dp" android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@+id/txtVideoTitleCaption" android:inputType="textMultiLine"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoDuration" app:layout_constraintStart_toEndOf="@+id/txtVideoDurationCaption"
                    android:layout_marginStart="5dp" android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@+id/txtVideoDurationCaption" android:inputType="textMultiLine"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoDatePublished"
                    app:layout_constraintStart_toEndOf="@+id/txtVideoDatePublishedCaption"
                    android:layout_marginStart="5dp" android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@+id/txtVideoDatePublishedCaption"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoDescription"
                    app:layout_constraintStart_toEndOf="@+id/txtVideoDescriptionCaption"
                    android:layout_marginStart="5dp" android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@+id/txtVideoDescriptionCaption" android:inputType="textMultiLine"
                    android:maxLines="3" android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/VIDEO_DESCRIPTION_READ_MORE"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVideoReadMore"
                    android:textSize="14sp"
                    android:inputType="textMultiLine"
                    android:onClick="onReadMoreClick"
                    app:layout_constraintTop_toBottomOf="@+id/txtVideoDescription"
                    android:textStyle="italic" android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@+id/txtVideoDescription" android:textColor="#BBBBBB"
                    android:visibility="invisible"/>
            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:focusable="false"
                    app:layout_constraintTop_toBottomOf="@+id/txtVideoReadMore" android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"
                    android:id="@+id/rvCommentsForVideo"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pbGroup1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" android:layout_marginTop="40dp"
                    app:layout_constraintTop_toTopOf="@+id/imgVideoThumbnail" android:visibility="visible"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pbGroup2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp" app:layout_constraintTop_toTopOf="@+id/rvCommentsForVideo"
                    android:visibility="gone"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
